--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,29 @@ main {
     height: calc(100vh - 150);
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.col-14 {
+    width: calc(100% / 7);
+}
+
+.content {
+    margin: 10px;
+    height:100px;
+    background-color: rgba(255, 0, 0, 0.568);
+    border: 1px solid black;
+}
+
+
 footer {
     height: 100px;
     background-color: grey;
