--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,12 @@ header button {
 }
 
 main {
-    
+    owerflow y: auto;
     height: calc(100vh - 150);
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -48,13 +48,28 @@ main {
 
 .content {
     margin: 10px;
-    height:100px;
-    background-color: rgba(255, 0, 0, 0.568);
-    border: 1px solid black;
+    position: relative;
+    
+    
+}
+
+.name {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    color: white;
+    font-size: 10px;
+    padding: 5px;
+}
+
+.content img {
+    width: 100%;
 }
 
 
 footer {
     height: 100px;
     background-color: grey;
+    
 }
